# YoutubeShortAutomation

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-short.yml
.state/: rotation.json  topic_history.json
assets/music/: README.md
config/: default.yaml  shorts.yaml
scripts/: reauth_youtube.py  register_report_schedule.ps1  register_schedule.ps1  run_daily.ps1  run_discovery.py  run_weekly_report.ps1
src/shorts/: __init__.py  __main__.py  cli.py  history.py  pipeline.py  retention.py  rotation.py
src/shorts/analytics/: __init__.py  __main__.py  cli.py  models.py  provider.py  report.py
src/shorts/config/: __init__.py  settings.py
src/shorts/domain/: __init__.py  brief.py  exceptions.py  interfaces.py  models.py
src/shorts/providers/: __init__.py  fonts.py  storage.py
src/shorts/providers/archive/: __init__.py  factory.py  s3.py
src/shorts/providers/llm/: __init__.py  factory.py  fallback.py  openai_compatible.py
src/shorts/providers/render/: __init__.py  factory.py  moviepy_renderer.py
src/shorts/providers/thumbnail/: __init__.py  factory.py  pillow_thumbnail.py
src/shorts/providers/upload/: __init__.py  factory.py  youtube.py
src/shorts/providers/visual/: __init__.py  factory.py  pexels.py  pollinations.py
src/shorts/providers/voice/: __init__.py  edge_tts_provider.py  factory.py  kokoro_provider.py  subtitles.py
src/shorts/stages/: __init__.py  archive.py  assembly.py  assets.py  enrichment.py  metadata.py  packaging.py  qa.py  script.py  thumbnail.py  upload.py  validation.py  visual_planning.py  voice.py
src/trend_intelligence/: __init__.py  cli.py  pipeline.py
src/trend_intelligence/aggregation/: __init__.py  aggregator.py
src/trend_intelligence/cache/: __init__.py  base.py  local.py
src/trend_intelligence/config/: __init__.py  settings.py
src/trend_intelligence/domain/: __init__.py  exceptions.py  interfaces.py  models.py
src/trend_intelligence/intelligence/: __init__.py  analyzer.py  prompts.py  schemas.py
src/trend_intelligence/intelligence/llm/: __init__.py  base.py  mock.py  nvidia_nim.py
src/trend_intelligence/logging/: __init__.py  setup.py
src/trend_intelligence/providers/: __init__.py  base.py  google_trends.py  hacker_news.py  news_rss.py  reddit.py  registry.py  youtube.py
src/trend_intelligence/scoring/: __init__.py  engine.py  weighted.py
src/trend_intelligence/selection/: __init__.py  selector.py
tests/: test_aggregation.py  test_analyzer.py  test_cache.py  test_config.py  test_google_trends.py  test_hacker_news.py  test_models.py  test_news_rss.py  test_nvidia_nim.py  test_pipeline.py  test_provider_base.py  test_registry.py  test_scoring.py  test_selection.py  test_shorts_archive.py  test_shorts_assembly.py  test_shorts_assets.py  test_shorts_brief.py  test_shorts_cli.py  test_shorts_config.py  test_shorts_e2e.py  test_shorts_enrichment.py  test_shorts_history.py  test_shorts_llm.py  test_shorts_metadata.py  test_shorts_models.py  test_shorts_packaging.py  test_shorts_pipeline.py  test_shorts_qa.py  test_shorts_render.py  test_shorts_report.py  test_shorts_retention.py  test_shorts_rotation.py  test_shorts_script.py  test_shorts_thumbnail.py  test_shorts_upload.py  test_shorts_validation.py  test_shorts_visual_planning.py  test_shorts_voice.py  test_youtube.py
