[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trend-intelligence"
version = "0.1.0"
description = "Stage 1 — Trend Discovery & Intelligence Layer for YouTube Shorts automation"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "httpx>=0.27",
    "feedparser>=6.0",
    "openai>=1.30",
]

[project.scripts]
trend-discovery = "trend_intelligence.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
]
# Enabled in later steps once credentials are supplied:
reddit = ["praw>=7.7"]
youtube = ["google-api-python-client>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
