[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trend-intelligence"
version = "0.1.0"
description = "Stage 1 — Trend Discovery & Intelligence Layer for YouTube Shorts automation"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "httpx>=0.27",
    "feedparser>=6.0",
    "openai>=1.30",
]

[project.scripts]
trend-discovery = "trend_intelligence.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
# Reddit provider (implemented later) uses praw; YouTube uses httpx (core dep).
reddit = ["praw>=7.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501",   # line length is handled by the formatter; don't flag long strings
    "UP042",  # keep (str, Enum); StrEnum changes str() semantics we rely on via .value
]

[tool.ruff.lint.isort]
known-first-party = ["trend_intelligence", "shorts"]
