[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trend-intelligence"
version = "0.1.0"
description = "Stage 1 — Trend Discovery & Intelligence Layer for YouTube Shorts automation"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "httpx>=0.27",
    "feedparser>=6.0",
    "openai>=1.30",
    "edge-tts>=6.1",
    "moviepy>=2.1",
    "imageio-ffmpeg>=0.5",
]

[project.scripts]
trend-discovery = "trend_intelligence.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
# Reddit trend provider (Stage 1) uses praw; Stage 1 YouTube provider uses httpx.
reddit = ["praw>=7.7"]
# Stage 2 YouTube upload (optional; lazy-imported):
youtube = ["google-api-python-client>=2", "google-auth-oauthlib>=1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501",   # line length is handled by the formatter; don't flag long strings
    "UP042",  # keep (str, Enum); StrEnum changes str() semantics we rely on via .value
]

[tool.ruff.lint.isort]
known-first-party = ["trend_intelligence", "shorts"]
